force-app/main/default/objects/PO_Master__c/PO_Master__c.object-meta.xml
<CustomObject>
    <label>PO Master</label>
    <nameField>
        <label>Macro Site ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>