force-app/main/default/objects/PO_Master__c/fields/Decom_Cost__c.field-meta.xml
<CustomField>
    <fullName>Decom_Cost__c</fullName>
    <label>Decom Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>