force-app/main/default/objects/PO_Master__c/fields/Leasing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Cost__c</fullName>
    <label>Leasing Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>